@@ -25,6 +25,7 @@ Engine features:
 * Powers that deal non-elemental damage will now apply additional elemental damage based on the damage stats for said elements.
 * Power 'trait_elemental' now works with all damage types (despite the name). Any additional damage bonuses for the specified damage type will apply on top of the converted damage.
 * Added 'tab.text_padding' to engine/widget_settings.txt config.
+* Added 'enabled' property to Char/Inv/Pow/Log menus for modders that wish to prevent the player from opening those menus.
 * Android: Enabled use of external input devices (gamepads, keyboards, mice)
 
 Engine fixes:
